Fixed .gitignore BOM

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# Created by https://www.toptal.com/developers/gitignore/api/c++,c,python,qt,opencv
+# Created by https://www.toptal.com/developers/gitignore/api/c++,c,python,qt,opencv
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,c,python,qt,opencv
 
 ### C ###
