--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = https://github.com/microsoft/vcpkg.git
+[submodule "deps/ElaWidgetTools"]
+	path = deps/ElaWidgetTools
+	url = https://github.com/MAWHA/ElaWidgetTools.git
