--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/ElaWidgetTools"]
 	path = deps/ElaWidgetTools
 	url = https://github.com/MAWHA/ElaWidgetTools.git
+[submodule "deps/spdlog"]
+	path = deps/spdlog
+	url = https://github.com/gabime/spdlog.git
