feat: enable pin to top

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "deps/spdlog"]
 	path = deps/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "deps/qwindowkit"]
+	path = deps/qwindowkit
+	url = https://github.com/stdware/qwindowkit.git
