feat: exec-and-read method

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -30,6 +30,8 @@ PRIVATE
     Logger.cpp
     Logger.h
     MacroHelper.h
+    Process.cpp
+    Process.h
     Platform.h
     Platform/windows.cpp
     Task/TaskGraph.cpp
