chore: fix elawidgettools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,7 @@ set(MAGIC_ENUM_OPT_BUILD_TESTS OFF)
 set(MAGIC_ENUM_OPT_INSTALL OFF)
 add_subdirectory(deps/magic_enum)
 
-set(ELAWIDGETTOOLS_BUILD_EXAMPLES OFF)
-set(ELAWIDGETTOOLS_BUILD_STATIC_LIB OFF)
+set(ELAWIDGETTOOLS_BUILD_EXAMPLES OFF CACHE BOOL "Build examples" FORCE)
 add_subdirectory(deps/ElaWidgetTools)
 
 set(QWINDOWKIT_INSTALL OFF)
