--- a/whmx-assistant/src/Uuid.cpp.in
+++ b/whmx-assistant/src/Uuid.cpp.in
@@ -13,18 +13,8 @@
    limitations under the License.
 */
 
-#pragma once
-
 #include <string>
 
 namespace Consts {
-
-static inline const std::string PACKAGE = "com.cipaishe.wuhua.bilibili";
-static inline const std::string ACTIVITY =
-    "com.cipaishe.wuhua.bilibili/com.cipaishe.wuhua.bilibili.activity.ONESDKSplashActivity";
-
-extern std::string VERSION;
-extern std::string HOMEPAGE_URL;
-extern std::string MUA_UUID;
-
+std::string MUA_UUID = "@desktop_app_uuid@";
 } // namespace Consts
