feat: basic package management

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -106,6 +106,8 @@ PRIVATE
     UI/TitleBar.h
     UI/NavWidget.cpp
     UI/NavWidget.h
+    Experimental/Package.cpp
+    Experimental/Package.h
     Experimental/UmaClient.cpp
     Experimental/UmaClient.h
     Experimental/StyledPanel.cpp
