feat: draft impl of activate uma instance

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -114,6 +114,8 @@ PRIVATE
     Experimental/MessageProducer.h
     Experimental/UmaClient.cpp
     Experimental/UmaClient.h
+    Experimental/UmaWorkbench.cpp
+    Experimental/UmaWorkbench.h
     Experimental/StyledPanel.cpp
     Experimental/StyledPanel.h
     Experimental/OverlayDialog.cpp
